# lindu-software

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  display.py  main.py  requirements_all.txt  setup.cfg  setup.py
bug/: vtk.bug
lindugui/: __init__.py
lindugui/settings/: icon.py  plugins.py  styles.py  threading.py
lindugui/widgets/: main_window.py  menu_bar.py
module/Displays/: CubedView.py  Map.py
module/GAD/: main.py
module/GAD/engine/: engines-gad  gad.bat
module/JHD/: main.py
module/JHD/engine/: engines-jhd  velest.bat
module/Tomography/: main.py
module/Tomography/subroutine/: display.py  hypoDD2tomofile.py  tomo_inverse.py  tomo_log.py
module/Visualization/: main.py
module/Visualization/engine/: seismopath
module/Visualization/subroutine/: pyqtEditable.py
module/hypoDD/: main.py
module/hypoDD/engine/: engines-hypoDD  hypoDD.bat  ph2dt.bat
modules/Displays/: CubedView.py  Map.py
modules/GAD/: main.py
modules/JHD/: main.py
modules/Tomography/: main.py
modules/hypoDD/: main.py
plugins/basemap/: basemap.py
plugins/bmkg2pha/: bmkg2pha.py
plugins/readASCII/: readASCII.py  title.txt
plugins/seismicview/: seismicview.py  title.txt
plugins/seismolist/: seismolist.py  title.txt
plugins/seismoview/: seismoview.py  title.txt
plugins/testplt/: testplt.py
src/lindu/: LMain.py  __init__.py
subroutine/icon/: Icon.py
subroutine/internet/: check.py
subroutine/plugins/: plugins.py
subroutine/styles/: main.py  main2.py
subroutine/thread/: threading.py  threading2.py
test/: guirun.py
tests/: test_run.py
tests/display/: 15vest.vel3d  15x.data  15y.data  15z.data
tests/gad/: GADManual.doc  gad.f90  ~$DManual.doc
(+127 files in other folders)
