[metadata]
name = lindu
version = 0.0.1
author = Yudha Styawan
author_email = yudhastyawan@gmail.com
description = a library for earthquake data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yudhastyawan/angka
project_urls =
    Bug Tracker = https://github.com/yudhastyawan/angka/issues
    Documentation = http://angka.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PySide2

[options.packages.find]
where = src