[metadata]
name = lindu
version = 0.0.2
author = Yudha Styawan
author_email = yudhastyawan@gmail.com
description = a library and GUI for earthquake data processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/comp-geoph-itera/lindu-software/tree/package
project_urls =
    Bug Tracker = https://github.com/comp-geoph-itera/lindu-software/issues
    Documentation = https://github.com/comp-geoph-itera/lindu-software/tree/package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PySide2
    yubundle
    obspy
    opencv-python

[options.packages.find]
where = src